force-app/main/default/objects/Aeropuerto__c/Aeropuerto__c.object-meta.xml
<CustomObject>
    <description>Es una locación fisica acondicionado para depachar y recibir todo tipo de vuelos en diferentes ciudades.</description>
    <label>Aeropuerto</label>
    <nameField>
        <label>Nombre de Aeropuerto</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Aeropuertos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>