force-app/main/default/objects/Aeropuerto__c/fields/Codigo_IATA__c.field-meta.xml
<CustomField>
    <fullName>Codigo_IATA__c</fullName>
    <description>Muestra el código IATA para cada aeropuerto</description>
    <label>Código IATA</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>