force-app/main/default/objects/Aeropuerto__c/fields/Pais__c.field-meta.xml
<CustomField>
    <fullName>Pais__c</fullName>
    <description>País en el que se encuentra ubicado el aeropuerto</description>
    <label>País</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Afganistán</fullName>
            </value>
            <value>
                <fullName>Alemania</fullName>
            </value>
            <value>
                <fullName>Angola</fullName>
            </value>
            <value>
                <fullName>Arabia Saudita</fullName>
            </value>
            <value>
                <fullName>Argentina</fullName>
            </value>
            <value>
                <fullName>Australia</fullName>
            </value>
            <value>
                <fullName>Austria</fullName>
            </value>
            <value>
                <fullName>Bangladés</fullName>
            </value>
            <value>
                <fullName>Bélgica</fullName>
            </value>
            <value>
                <fullName>Bolivia</fullName>
            </value>
            <value>
                <fullName>Brasil</fullName>
            </value>
            <value>
                <fullName>Canadá</fullName>
            </value>
            <value>
                <fullName>Catar</fullName>
            </value>
            <value>
                <fullName>Chile</fullName>
            </value>
            <value>
                <fullName>China</fullName>
            </value>
            <value>
                <fullName>Chipre</fullName>
            </value>
            <value>
                <fullName>Colombia</fullName>
                <default>true</default>
                <label>Colombia</label>
            </value>
            <value>
                <fullName>Corea del Sur</fullName>
            </value>
            <value>
                <fullName>Costa Rica</fullName>
            </value>
            <value>
                <fullName>Croacia</fullName>
            </value>
            <value>
                <fullName>Cuba</fullName>
            </value>
            <value>
                <fullName>Ecuador</fullName>
            </value>
            <value>
                <fullName>El Salvador</fullName>
            </value>
            <value>
                <fullName>Emiratos Árabes Unidos</fullName>
            </value>
            <value>
                <fullName>España</fullName>
            </value>
            <value>
                <fullName>Estados Unidos</fullName>
            </value>
            <value>
                <fullName>Finlandia</fullName>
            </value>
            <value>
                <fullName>Francia</fullName>
            </value>
            <value>
                <fullName>Grecia</fullName>
            </value>
            <value>
                <fullName>Guatemala</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>