force-app/main/default/objects/Aeropuerto__c/fields/Puertas_de_Embarque__c.field-meta.xml
<CustomField>
    <fullName>Puertas_de_Embarque__c</fullName>
    <description>Número de puertas que posee el aeropuerto para embarcar pasajeros</description>
    <label>Puertas de Embarque</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>