force-app/main/default/objects/Aeropuerto__c/fields/Recibe_vuelos_nacionales__c.field-meta.xml
<CustomField>
    <fullName>Recibe_vuelos_nacionales__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indica si el aeropuerto en cuestión esta habilitado para recibir vuelos nacionales</description>
    <label>¿Recibe vuelos nacionales?</label>
    <type>Checkbox</type>
</CustomField>