force-app/main/default/objects/Aeropuerto__c/fields/Ubicacion__c.field-meta.xml
<CustomField>
    <fullName>Ubicacion__c</fullName>
    <label>Ubicacion</label>
    <scale>7</scale>
    <type>Location</type>
</CustomField>