force-app/main/default/objects/Aeropuerto__c/listViews/Internacionales.listView-meta.xml
<ListView>
    <fullName>Internacionales</fullName>
    <columns>Codigo_IATA__c</columns>
    <columns>NAME</columns>
    <columns>Pais__c</columns>
    <columns>Ciudad__c</columns>
    <columns>Recibe_vuelos_internacionales__c</columns>
    <columns>Recibe_vuelos_nacionales__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Pais__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Internacionales</label>
</ListView>