force-app/main/default/objects/Aeropuerto__c/listViews/Locales.listView-meta.xml
<ListView>
    <fullName>Locales</fullName>
    <columns>Codigo_IATA__c</columns>
    <columns>NAME</columns>
    <columns>Pais__c</columns>
    <columns>Ciudad__c</columns>
    <columns>Recibe_vuelos_internacionales__c</columns>
    <columns>Recibe_vuelos_nacionales__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Pais__c</field>
        <operation>equals</operation>
        <value>Colombia</value>
    </filters>
    <label>Locales</label>
</ListView>