force-app/main/default/objects/Aeropuerto__c/listViews/Puertas_de_Embarque.listView-meta.xml
<ListView>
    <fullName>Puertas_de_Embarque</fullName>
    <columns>Codigo_IATA__c</columns>
    <columns>NAME</columns>
    <columns>Pais__c</columns>
    <columns>Ciudad__c</columns>
    <columns>Recibe_vuelos_internacionales__c</columns>
    <columns>Recibe_vuelos_nacionales__c</columns>
    <columns>Puertas_de_Embarque__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Puertas_de_Embarque__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Puertas de Embarque</label>
</ListView>